--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ Unlock boundless energy with Breezy’s nutritious and wholesome meals! Our cura
       <ul class="bottom">
     
      
-    <li><img src="assets/graphic/logo copy.svg" alt=""></li>
+    <li><img src="assets/graphic/logo_bund.png" alt=""></li>
         <li><a href="assets/img/privacy.jpeg">Contact</a></li>
         <li><a href="assets/img/terms.jpeg">Links</a></li>
 
